# sofdocs-desktop

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend-dist/: index.html
src-tauri/src/: main.rs
